--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ numpy==1.25.0
 scikit-learn==1.3.0
 torch==2.0.1
 ffmpeg =="https://www.gyan.dev/ffmpeg/builds/ffmpeg-git-full.7z"
+streamlit run app1.py
